Bug 135203 - Wrong Button-Text on Upload-Projekct-File-Dialog
Summary: Wrong Button-Text on Upload-Projekct-File-Dialog
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 3.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-06 15:42 UTC by Samuel Suther
Modified: 2006-12-19 13:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Suther 2006-10-06 15:42:42 UTC
Version:           3.5.3 (using KDE 3.5.2 Level "a" , SUSE 10.0 UNSUPPORTED)
Compiler:          Target: i586-suse-linux
OS:                Linux (i686) release 2.6.13-15.12-default

When u start to upload via Right-Click >> File-Upload and u Cancel the upload, quanta shows an Confirm-Dialoge.
On this dialoge u see both buttons with Cancel (in German "Abbrechen")

This is very confusing!!!

See Screenshot at http://img92.imageshack.us/my.php?image=yuantabugib2.jpg
Comment 1 András Manţia 2006-10-06 15:52:11 UTC
This is a translation error, as the original dialog asks:
"Do you really want to abort the upload?
 Abort Cancel" (Cancel the dialog, thus the abort = continue with upload)

I don't blame the translators only, as AFAIK the Cancel doesn't appear in the same context, maybe I should add more information to the i18n call for Abort...
Anyway, I reassign it to the i18n team.
Comment 2 Thomas Reitelbach 2006-10-09 22:36:11 UTC
I'll fix this translation error soon. But i really would prefer that Andras fixes the dialog to show somthing like "do you really want to abort upload? continue upload  --  abort upload"

In the current way i can only translate the "cancel abort" because the translation for "abort" automatically comes from kdelibs.po.
I leave the bug open so Andras can decide if he is willing to change the dialog.

In addition to the translation bug there seems to be a real bug in the dialog code: when i tried to reproduce the bug, both buttons did break uploading!
Comment 3 Thomas Reitelbach 2006-10-09 22:37:26 UTC
SVN commit 594020 by reitelbach:

fix translation

CCBUG:135203


 M  +2 -4      quanta.po  


--- branches/stable/l10n/de/messages/kdewebdev/quanta.po #594019:594020
@@ -14,7 +14,7 @@
 msgstr ""
 "Project-Id-Version: quanta\n"
 "POT-Creation-Date: 2006-10-07 02:41+0200\n"
-"PO-Revision-Date: 2006-09-30 14:42+0200\n"
+"PO-Revision-Date: 2006-10-09 21:57+0200\n"
 "Last-Translator: Thomas Reitelbach <tr@erdfunkstelle.de>\n"
 "Language-Team: German <kde-i18n-de@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -14399,7 +14399,7 @@
 msgid ""
 "_: Abort the uploading\n"
 "Abort"
-msgstr ""
+msgstr "Hochladen abbrechen"
 
 #: project/teammembersdlg.cpp:58
 msgid "New Member"
@@ -15389,5 +15389,3 @@
 msgid "Saves all modified files"
 msgstr "Alle geänderten Dateien speichern"
 
-#~ msgid "Abort"
-#~ msgstr "Abbrechen"
Comment 4 Mathias Homann 2006-12-16 13:06:17 UTC
this still exists in the quanta version that comes with kde 3.5.5.
Comment 5 András Manţia 2006-12-19 13:37:00 UTC
SVN commit 614899 by amantia:

Avoid an Abort and Cancel button as it confuses translators. Still not the best, but I missed the message freeze, so I had to use an existing string.
If I don't forget I will use a better string in the next release.

BUG: 135203 

 M  +2 -1      projectupload.cpp  


--- branches/KDE/3.5/kdewebdev/quanta/project/projectupload.cpp #614898:614899
@@ -756,8 +756,9 @@
   if (uploadInProgress && !m_profilesOnly)
   {
     suspendUpload = true;
+    //TODO when message freeze if lift: i18n("Upload") -> i18n("Continue") or "Continue upload"
     if (KMessageBox::questionYesNo(this,i18n("Do you really want to abort the upload?"),
-                                   i18n("Abort Upload"), i18n("Abort the uploading", "Abort"), KStdGuiItem::cancel()) == KMessageBox::No)
+                                   i18n("Abort Upload"), i18n("Abort the uploading", "Abort"), i18n("Upload")) == KMessageBox::No)
     {
       suspendUpload = false;
       emit uploadNext();