Avoid an Abort and Cancel button as it confuses translators. Still not the best, but I missed the message freeze, so I had to use an existing string. If I don't forget I will use a better string in the next release.

BUG: 135203